[package]
name = "neo4rs"
version = "0.9.0-rc.1"
authors = [
    "Neo4j Labs <devrel@neo4j.com>",
    "John Pradeep Vincent <yehohanan7@gmail.com>",
]
edition = "2021"
description = "Rust driver for Neo4j"
license = "MIT"
repository = "https://github.com/neo4j-labs/neo4rs"
documentation = "https://docs.rs/neo4rs"
readme = "../README.md"
keywords = ["neo4j", "driver", "bolt", "cypher", "tokio"]
categories = ["database", "network-programming", "asynchronous"]
rust-version = "1.75.0"

[features]
json = ["serde_json"]
unstable-v1 = ["unstable-bolt-protocol-impl-v2", "unstable-result-summary"]
unstable-serde-packstream-format = []
unstable-result-summary = ["unstable-serde-packstream-format"]
unstable-bolt-protocol-impl-v2 = [
    "unstable-serde-packstream-format",
    "unstable-result-summary",
    "dep:nav-types",
    "dep:time",
]

[dependencies]

[dev-dependencies]
pretty_env_logger = "0.5.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_bytes = "0.11.0"
serde_json = "1.0.0"
serde_test = "1.0.176"
serde_with = "3.0.0"
tap = "1.0.1"
test-case = "3.3.1"
testcontainers = { version = "0.20.0", features = ["blocking"] }
testcontainers-modules = { version = "0.8.0", features = ["neo4j"] }
time = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies.lenient_semver]
version = "0.4.2"
default-features = false
features = ["version_lite"]
